--- a/style.css
+++ b/style.css
@@ -11,15 +11,20 @@
 
 body {
     background-color: #fefdf9;
+    display: grid;
+    grid-template-columns: 400px;
+    grid-template-rows: 85px 1710px 85px;
+    grid-template-areas: 'header'
+                         'main'
+                         'footer';
+    justify-content: center;
 }
 
 header {
-    margin: auto;
-    max-width: 400px;
-    height: 130px;
+    grid-area: header;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    column-gap: 60%;
 }
 
 header #burguer {
@@ -27,7 +32,7 @@ header #burguer {
     z-index: 1000;
     color: black;
     font-size: 3em;
-    top: 40px;
+    top: 25px;
     cursor: pointer;
 }
 
@@ -56,6 +61,7 @@ header a {
 }
 
 main {
+    grid-area: main;
     max-width: 768px;
     margin: auto;
     display: grid;
@@ -166,5 +172,6 @@ main {
 }
 
 footer {
+    grid-area: footer;
     text-align: center;
 }
